<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="@drawable/card_background"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/memberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_item_name_ex"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/memberEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_item_email_ex"
            android:textSize="14sp"
            android:textColor="#455A64"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit_member_icon"
        android:background="@android:color/transparent" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_member_icon"
        android:background="@android:color/transparent" />
</LinearLayout>
